# Mnist_ML

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: modelo_sgd.pkl
notebooks/: mnist_sgd_base.ipynb
