[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mnist"
version = "0.0.1"
description = "Trabalho da disciplina de Aprendizado de M\u00e1quina"
authors = [
  { name = "Vitor Carvalho" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mnist"]
include = ["pyproject.toml", "mnist/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mnist"]
force-sort-within-sections = true

